fixing absolute elements on mobile

--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -251,10 +251,14 @@ article {
                 }
                 .quote.wrapper {
                     width: 100%;
-                    position: absolute;
-                    top: 50%;
-                    left: 0;
-                    @include translateY(-50%);
+                    position: static;
+                    display: block;
+                    @media screen and (min-width: $mobilelandscapewidth){
+                        position: absolute;
+                        top: 50%;
+                        left: 0;
+                        @include translateY(-50%);
+                    }
                     blockquote {
                         color: white;
                         flex: 0 0 auto;
@@ -289,10 +293,8 @@ article {
                 .hashtag-wrapper {
                     width: 100%;
                     text-align: center;
-                    position: absolute;
-                    top: 50%;
-                    @include translateY(-50%);
-                    left: 0;
+                    position: static;
+                    display: block;
                     font-family: 'Arapey', serif;
                     font-weight: normal;
                     font-size: $font__size-large;
@@ -301,6 +303,10 @@ article {
                     color: white;
                     @media screen and (min-width: $mobilelandscapewidth){
                         font-size: $font__size-small;
+                        position: absolute;
+                        top: 50%;
+                        @include translateY(-50%);
+                        left: 0;
                     }
                     @media screen and (min-width: $tabwidth){
                         font-size: $font__size-medium;
@@ -502,10 +508,14 @@ article {
                 }
                 .quote.wrapper {
                     width: 100%;
-                    position: absolute;
-                    top: 50%;
-                    left: 0;
-                    @include translateY(-50%);
+                    display: block;
+                    position: static;
+                    @media screen and (min-width: $deskwidth){
+                        position: absolute;
+                        top: 50%;
+                        left: 0;
+                        @include translateY(-50%);
+                    }
                     blockquote {
                         color: white;
                         width: 80%;
